fix issue with non unique result exception on init
- configure logger to work on info lvl
- fix init issue
- cover fix with a unit test